<resources>
    <string name="app_name">Book Translations</string>
    <string name="nav_name">Tornasuk</string>
    <string name="numTranslations">Traducciones</string>
    <string name="navTextInicio">Inicio</string>
    <string name="navTextGeneral">General</string>
    <string name="navTextOverlord">Overlord</string>
    <string name="navTextLogHorizon">Log Horizon</string>
    <string name="navTextClassroom">Classroom of the Elite</string>
    <string name="navTextNgl">No Game No Life</string>
    <string name="navTextClannad">Clannad ~After Story~</string>
    <string name="navTextKoichoco">Koichoco</string>
    <string name="libroPags">Páginas</string>
    <string name="word">Word :</string>
    <string name="translation">Translation :</string>
    <string name="delete">Eliminar</string>
    <string name="txtPagina">Página :</string>
    <string name="ok">Añadir</string>
    <string name="punto">·</string>
    <string name="guion">-</string>
    <string name="okMod">Modificar</string>
    <string name="novelArg">Novel</string>
    <string name="generalArg">General</string>
    <string name="txtVolumen">Volumen :</string>
    <string name="bar_search">Buscar palabra</string>
    <string name="translationAdded">Traducción añadida</string>
    <string name="translationMod">Traducción modificada</string>
    <string name="translationDeleted">Traducción eliminada</string>
    <string name="editTextBlank">Introduce datos válidos</string>
    <string name="pgExiste">Ya existe esa página</string>
    <string name="deletedPag">Página eliminada</string>
    <string name="volumeAdded">Volumen añadido</string>
    <string name="errorVolFormat">El volume introducido no tiene un formato es válido</string>
    <string name="pto">0%</string>
    <string name="count">0</string>
    <string name="navTranslation">Translations</string>
    <string name="navLastTranslations">Traducciones recientes</string>
    <string name="navSearchTranslations">Buscar traducciones</string>
    <string name="txtTranslations">Traducciones</string>
    <string name="buscarTraduccion">Buscar traducción…</string>
    <string name="barIcon">Bar Icon</string>
    <string name="lastTranslations">Traducciones recientes</string>
    <string name="searchTranslations">Buscar traducciones</string>
    <string name="wordRepeated">Ya existe esa palabra traducida</string>
    <string name="wordNotChecked">Comprueba que la palabra o una derivación de ésta no exista ya</string>
    <string name="volRepeated">Ya existe ese volume</string>
    <string name="errorWR">No se pudo abrir la app de WordReference</string>
    <string name="checkWordLabel">Checking word…</string>
    <string name="errorCheckingWord">Error al buscar la palabra introducida</string>
    <string name="checkWordCoincidencias1">No se han encontrado coincidencias</string>
    <string name="checkWordCoincidencias2">Se ha encontrado 1 coincidencia</string>
</resources>