<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtNewWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="38dp"
        android:text="@string/word"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtNewTranslation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="38dp"
        android:text="@string/translation"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editWord" />

    <EditText
        android:id="@+id/editWord"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="60dp"
        android:ems="10"
        android:inputType="textMultiLine|textCapSentences"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtNewWord"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTranslation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:inputType="textMultiLine|textCapSentences"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtNewTranslation"
        app:layout_constraintTop_toBottomOf="@+id/editWord" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTranslation">

        <Button
            android:id="@+id/btnTranslation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/ripple_button"
            android:text="@string/ok"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabWR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            app:borderWidth="0dp"
            app:fabCustomSize="45dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:maxImageSize="33dp"
            app:srcCompat="@drawable/icon_wr" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSearchCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@android:color/transparent"
        android:clickable="true"
        android:visibility="invisible"
        app:borderWidth="0dp"
        app:fabCustomSize="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/editWord"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editWord"
        app:layout_constraintTop_toTopOf="@+id/editWord"
        app:maxImageSize="38dp"
        app:srcCompat="@drawable/search_translations2" />

    <ProgressBar
        android:id="@+id/progBarCheck"
        style="?android:attr/progressBarStyle"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/white"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/editWord"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editWord"
        app:layout_constraintTop_toTopOf="@+id/editWord"/>

</androidx.constraintlayout.widget.ConstraintLayout>